##############
## latex2rtf changes from 2.3.0
##############

r1236 | whennings
a) in graphics.c commented-out lines 1836-1837
   which caused \begin{equation}...\end{equation}
   to be output to l2r_nnnn.tex as $$...$$
b) in latex2png script, changed order in which to try conversion
   from latex-dvi / pdflatex / xelatex
   to   pdflatex  / xelatex  / latex

r1235 | whennings
WH: update sourceforge links in l2rshell "you can help"

r1234 | whennings
WH: fixed a typo in documentation

r1233 | whennings
WH: updated documentation for tikz support

r1232 | prahl
add another tikz test file

r1231 | whennings
WH: changed latex2png for cases where "grep -c tikzpicture" >2
added trying pdflatex before trying xelatex
added test file "membrane-ions.tex"

r1230 | whennings
WH: changed latex2png to unix version (previous upload erroneously was DOS/Win version)
added tikz.rtf to test/Makefile

r1229 | whennings
WH: added conversion of tikz picture to eps (option -E8)
re-included r1221 modification to latex2png script so that it also tries pdflatex and xelatex
incremented version to 2.3.4

r1228 | prahl
add test tikzpicture file

r1227 | prahl
replace static keywords and clean up graphics.h

r1226 | prahl
updated latex2png to work with tikzpictures.

r1225 | prahl
backing out many of the changes need for tikz.  Much simpler method used now.

r1224 | prahl
include the tikz files that I forgot

r1223 | prahl
Add tikz support

r1222 | whennings
WH: incremented version to 2.3.3
fixed bug ticket #148 "graphicspath not working"

r1221 | whennings
WH: incremented version to 2.3.2
do not split equations at \\ in align environments
    even when converting to bitmap or eps
latex2png: suppress verbose messages unless opt_k (debugging) is set
creating html files in doc/web removed from doc/Makefile in Unix distribution
   (but not in SVN repository)
(Windows l2rshell) Find MikTeX also when that is user installed and not added to PATH
fixed typo in version.h